# abi

./: .gitignore  README.md
01-First-Executable/: Makefile  README.md
01-Single-Executable/: Makefile  README.md
01-Single-Executable/embedder/: main.cc
02-First-Library/: Makefile  README.md
02-First-Library/embedder/: main.cc
02-Static-Library/: Makefile  README.md
03-Shared-Library/: Makefile  README.md
03-Shared-Library-ABI-Break/: README.md  abi-break-1.diff  abi-break.diff
03-Shared-Library-ABI-Break/embedder/: main.cc
RustInterop/01-Simple/: Cargo.toml  Makefile  README.md  embedder.cc
RustInterop/01-Simple/src/: lib.rs
