[package]
name = "clibraryinrust"
version = "0.1.0"
edition = "2021"

[lib]
# See https://doc.rust-lang.org/cargo/reference/cargo-targets.html#the-crate-type-field.
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
